Replace Countries stat card with Inactive count

--- a/templates/home.twig
+++ b/templates/home.twig
@@ -45,14 +45,14 @@
         </div>
     </div>
     <div class="col-md-3">
-        <div class="card bg-warning text-dark">
+        <div class="card bg-secondary text-white">
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <div>
-                        <h6 class="card-subtitle mb-1">Countries</h6>
-                        <h2 class="card-title mb-0">{{ statistics.by_country|length }}</h2>
+                        <h6 class="card-subtitle mb-1 text-white-50">Inactive</h6>
+                        <h2 class="card-title mb-0">{{ statistics.inactive_machines }}</h2>
                     </div>
-                    <i class="bi bi-globe fs-1 opacity-50"></i>
+                    <i class="bi bi-pause-circle fs-1 opacity-50"></i>
                 </div>
             </div>
         </div>
